[gd_scene load_steps=5 format=3 uid="uid://be23fhjrysoh1"]

[ext_resource type="Script" path="res://main.gd" id="1_5hvyp"]
[ext_resource type="FontFile" uid="uid://rmfftojoxh0f" path="res://assets/fonts/joystix monospace.otf" id="2_nyc1i"]

[sub_resource type="Theme" id="Theme_ksjrs"]
default_font = ExtResource("2_nyc1i")
default_font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_twq5t"]
font = ExtResource("2_nyc1i")
font_size = 70

[node name="Main" type="Node3D"]
script = ExtResource("1_5hvyp")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ksjrs")

[node name="Label" type="Label" parent="Menu"]
layout_mode = 2
offset_left = 481.0
offset_top = 308.0
offset_right = 1466.0
offset_bottom = 392.0
text = "Powerline Pursuit"
label_settings = SubResource("LabelSettings_twq5t")

[node name="PlayButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 862.0
offset_top = 605.0
offset_right = 1036.0
offset_bottom = 673.0
text = "Play"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ksjrs")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 0
offset_left = -125.0
offset_top = -104.0
offset_right = -85.0
offset_bottom = -64.0
scale = Vector2(54.1317, 32.604)

[node name="ExitButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 860.0
offset_top = 485.0
offset_right = 1034.0
offset_bottom = 553.0
text = "Quit"

[connection signal="button_down" from="Menu/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="PauseMenu/ExitButton" to="." method="_on_exit_button_button_down"]
